--- a/Txt with Jupyter notebook.ipynb
+++ b/Txt with Jupyter notebook.ipynb
@@ -200,7 +200,8 @@
     "    avg=avg.rename(columns={0:'score'})\n",
     "    avg['word']=avg.index\n",
     "    avg=avg.sort_values('score',ascending=False)\n",
-    "    data=avg[:h+1]\n",
+    "    avg=avg.T\n",
+    "    data=avg.iloc[:,:n+1]\n",
     "    data.to_csv(y)\n",
     "    print(data)"
    ]
@@ -273,7 +274,7 @@
     "        csv_path=file_path[0]+\".csv\"\n",
     "        '''\n",
     "        \n",
-    "        csv_path = filename + \".csv\"\n",
+    "        csv_path = filename + \".keyword\"\n",
     "        \n",
     "        print (\" 2 \" + csv_path)\n",
     "        b=read_files(file_path)\n",
@@ -309,7 +310,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
